[Qt] [WK2] MiniBrowser assert in QtWebProccess on startup in debug build. https://bugs.webkit.org/show_bug.cgi?id=71196

Reviewed by Kenneth Rohde Christiansen.

Ensure AC is turned off for the desktop view before we launch the process.
This avoids "accidential" enterAc/exitAc calls that cause failing assertions
because we don't really support AC in this setup.

The touch side works the same way, i.e. enable the preference before calling
init().

* UIProcess/qt/QtDesktopWebPageProxy.cpp:
(QtDesktopWebPageProxy::QtDesktopWebPageProxy):

Canonical link: https://commits.webkit.org/87756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99165 268f45cc-cd09-0410-ab3c-d52691b4dbfc